start + registerscreen + basic main-menu

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
+<header class="retroBlocks-header">
+    <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
+</header>
 <div class="login-container">
-    <h1>Tetris Game</h1><br>
+    <br>
     <form>
         <input type="text" name="user" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
