--- a/frontend/startScreen.html
+++ b/frontend/startScreen.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Reinbert Van Acker"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tetris</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
-<div class="login-container">
-    <h1>Tetris Game</h1><br>
-    <form>
-        <input type="text" name="user" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <input type="submit" name="login" class="login login-submit" value="login">
-    </form>
+<div class="startScreen-container">
+    <header class="retroBlocks-header">
+        <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
+    </header>
 
-    <div class="login-help">
-        <a href="#">Register</a>
+
+    <div class="login-container">
+        <br>
+        <form>
+            <input type="text" name="user" placeholder="Username">
+            <input type="password" name="password" placeholder="Password">
+            <input type="submit" name="login" class="login login-submit" value="login">
+        </form>
+
+        <div class="login-help">
+            <a href="#">Register</a>
+        </div>
     </div>
 </div>
 
