main-menu + start chooseHero

--- a/frontend/main_menu.html
+++ b/frontend/main_menu.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <title>Main_menu</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
 
 <div class="userInfo">
-    <ul>
-        <li><img src="#" alt="avatar" title="avatar"></li>
-        <li>Welcome <span class="userName">userName</span></li>
-        <li>ClanName</li>
-        <li>Cubes: <span class="numberOfCubes">500</span></li>
-        <li>LVL: <span class="level">5</span></li>
-        <li>Leader</li>
-        <li>Clanpoints: <span class="clanpoints">30</span></li>
-    </ul>
+
+    <div class="userInfo-1">
+        <img src="#" class="user-avatar" alt="avatar" title="avatar">
+        <p>Welcome <span class="userName">userName</span></p>
+        <p>LVL: <span class="level">5</span></p><span class="xp"><span class="xp-value"></span><span class="xp-text">200/500 XP</span></span>
+    </div>
+
+    <div class="userInfo-2">
+        <p>ClanName</p>
+        <p>Leader</p>
+    </div>
+
+    <div>
+        <p><img src="assets/media/cube_logo.png" class="cube" title="cube" alt="cube">Cubes: <span class="numberOfCubes">500</span><a href="#"><i class="material-icons">add_circle</i></a></p>
+        <p><img src="assets/media/clanPoints-logo.png" class="cp" alt="cp" title="cp">Clanpoints: <span class="clanpoints">30</span></p>
+    </div>
+
 </div>
 
 
