--- a/frontend/register.html
+++ b/frontend/register.html
@@ -18,7 +18,7 @@
         <input type="submit" name="register" class="login register-submit" value="register">
     </form>
     <div class="login-help">
-        <a href="#">Login</a>
+        <a href="startScreen.html">Login</a>
     </div>
 </div>
 </body>
