--- a/frontend/startScreen.html
+++ b/frontend/startScreen.html
@@ -24,10 +24,10 @@
         </form>
 
         <div class="login-help">
-            <a href="#">Register</a>
+            <a href="register.html">Register</a>
         </div>
     </div>
 </div>
-
+<script type="text/javascript" src="assets/js/startScreen.js"></script>
 </body>
 </html>
