frontend placed in /resources/webroot

--- a/Backend/src/main/resources/webroot/index.html
+++ b/Backend/src/main/resources/webroot/index.html
@@ -6,8 +6,8 @@
 
     <title>BinaryFour's TETRIS</title>
 
-    <link href="assets/media/favicon.ico" rel="icon">
-    <link href="assets/css/screen.css" rel="stylesheet">
+    <link href="../assets/media/favicon.ico" rel="icon">
+    <link href="../assets/css/screen.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -53,8 +53,8 @@
 
 
 
-<script type="module" src="assets/js/blockPatterns.js"></script>
-<script type="module" src="assets/js/script.js"></script>
+<script type="module" src="../assets/js/blockPatterns.js"></script>
+<script type="module" src="../assets/js/script.js"></script>
 
 </body>
 </html>
