--- a/frontend/chooseHero.html
+++ b/frontend/chooseHero.html
@@ -9,8 +9,30 @@
 
 <header class="retroBlocks-header">
     <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
-    <p class="chooseHeroTitle">Choose a hero</p>
+    <!--<p class="chooseHeroTitle">Choose a hero</p>-->
 </header>
+
+
+<div class="choose-hero">
+
+    <div class="hero-pacman">
+
+    </div>
+    <div class="hero-donkeykong">
+
+    </div>
+    <div class="hero-pikachu">
+
+    </div>
+    <div class="hero-sony">
+
+    </div>
+
+</div>
+
+<div class="chooseHero-buttons">
+
+</div>
 
 </body>
 </html>
