--- a/frontend/main_menu.html
+++ b/frontend/main_menu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Main_menu</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
