choose gamemode html, css, javascript

--- a/frontend/chooseGamemode.html
+++ b/frontend/chooseGamemode.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Choose_hero</title>
+    <title>Gamemodes</title>
+    <meta name="author" content="Bryan Helsens"/>
     <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -10,30 +11,24 @@
 
 <header class="retroBlocks-header">
     <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
-    <!--<p class="chooseHeroTitle">Choose a hero</p>-->
+    <p class="title">Choose a gamemode</p>
 </header>
 
-
-<div class="choose-hero">
-
-    <div class="hero-pacman">
-
-    </div>
-    <div class="hero-donkeykong">
-
-    </div>
-    <div class="hero-pikachu">
-
-    </div>
-    <div class="hero-sony">
-
+<main>
+    <div id="showAllGamemodes">
     </div>
 
-</div>
+    <div class="back">
+        <input type="submit" value="Back" id="back" class="back-submit">
+    </div>
 
-<div class="chooseHero-buttons">
+</main>
 
-</div>
+<footer>
+
+</footer>
+
+<script type="text/javascript" src="assets/js/chooseGamemode.js"></script>
 
 </body>
 </html>
