--- a/frontend/chooseHero.html
+++ b/frontend/chooseHero.html
@@ -13,22 +13,26 @@
 </header>
 
 
-<div class="choose-hero">
-
-    <div class="hero-pacman">
-
+<main class="choose-hero-container">
+    <div class="choose-hero">
+        <a href="#" class="hero-pacman">
+            <img src="assets/media/donkeyKong.gif" class="donkeyKong" alt="donkeyKong" title="donkeyKong">
+            <p>Pac man</p>
+        </a>
+        <a href="#" class="hero-donkeykong">
+            <img src="assets/media/donkeyKong.gif" class="donkeyKong" alt="donkeyKong" title="donkeyKong">
+            <p>Donkey Kong</p>
+        </a>
+        <a href="#" class="hero-pikachu">
+            <img src="assets/media/donkeyKong.gif" class="donkeyKong" alt="donkeyKong" title="donkeyKong">
+            <p>Pikachu</p>
+        </a>
+        <a href="#" class="hero-sony">
+            <img src="assets/media/donkeyKong.gif" class="donkeyKong" alt="donkeyKong" title="donkeyKong">
+            <p>Sony</p>
+        </a>
     </div>
-    <div class="hero-donkeykong">
-
-    </div>
-    <div class="hero-pikachu">
-
-    </div>
-    <div class="hero-sony">
-
-    </div>
-
-</div>
+</main>
 
 <div class="chooseHero-buttons">
 
