--- a/application/src/main/resources/webroot/pages/register.html
+++ b/application/src/main/resources/webroot/pages/register.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reinbert Van Acker"/>
     <title>Tetris</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
 </head>
 <body>
 <header class="retroBlocks-header">
-    <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
+    <img src="../assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
 </header>
 <div class="login-container">
-    <br>
     <form>
         <input type="text" name="user" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
-        <input type="submit" name="register" class="login register-submit" value="register">
+        <input type="submit" name="register" class="login register-submit" value="Register">
     </form>
     <div class="login-help">
         <a href="startScreen.html">Login</a>
