--- a/frontend/startScreen.html
+++ b/frontend/startScreen.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tetris</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
 </head>
 <body>
 
@@ -16,11 +17,10 @@
 
 
     <div class="login-container">
-        <br>
         <form>
             <input type="text" name="user" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
-            <input type="submit" name="login" class="login login-submit" value="login">
+            <input type="submit" name="login" class="login login-submit" value="Login">
         </form>
 
         <div class="login-help">
