--- a/application/src/main/resources/webroot/pages/main_menu.html
+++ b/application/src/main/resources/webroot/pages/main_menu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Main_menu</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,7 @@
 <div class="userInfo">
 
     <div class="userInfo-1">
-        <img src="assets/media/avatars/Avatar_Banana.png" class="user-avatar" alt="avatar" title="avatar">
+        <img src="../assets/media/avatars/Avatar_Banana.png" class="user-avatar" alt="avatar" title="avatar">
         <p>Welcome <span class="userName">userName</span></p>
         <p>LVL: <span class="level">5</span></p><span class="xp"><span class="xp-value"></span><span class="xp-text">200/500 XP</span></span>
     </div>
@@ -24,8 +24,8 @@
     </div>
 
     <div>
-        <p><img src="assets/media/cube_logo.png" class="cube" title="cube" alt="cube">Cubes: <span class="numberOfCubes">500</span><a href="#"><i class="material-icons">add_circle</i></a></p>
-        <p><img src="assets/media/clanPoints-logo.png" class="cp" alt="cp" title="cp">Clanpoints: <span class="clanpoints">30</span></p>
+        <p><img src="../assets/media/cube_logo.png" class="cube" title="cube" alt="cube">Cubes: <span class="numberOfCubes">500</span><a href="#"><i class="material-icons">add_circle</i></a></p>
+        <p><img src="../assets/media/clanPoints-logo.png" class="cp" alt="cp" title="cp">Clanpoints: <span class="clanpoints">30</span></p>
     </div>
 
 </div>
@@ -40,8 +40,10 @@
     </ul>
 </div>
 <div class="main logOut">
-    <input type="submit" name="logOut" class="main logOut-submit" value="Log out">
+    <input type="submit" id="logOut" name="logOut" class="main logOut-submit" value="Log out">
 </div>
+
+<script type="text/javascript" src="../assets/js/main_menu.js"></script>
 
 </body>
 </html>
