Checkmarker toegevoegd voor het aantal dagen dat je na elkaar hebt ingelogd

--- a/application/src/main/resources/webroot/pages/dailystreaks.html
+++ b/application/src/main/resources/webroot/pages/dailystreaks.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/dailystreaks.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
 <header class="centerDailyStreak">
     <form id="dailystreaks" class="showDailyRewards">
-        <h1>Daily Cubes</h1>
+        <h1>Daily Streaks</h1>
 
         <p>Here are your daily rewards!</p>
 
