basic multiplayer field

--- a/application/src/main/resources/webroot/pages/chooseMenu.html
+++ b/application/src/main/resources/webroot/pages/chooseMenu.html
@@ -18,7 +18,7 @@
         <input type="submit" value="Play with friends" id="playFriends" class="playFriends-submit">
     </div>
     <div class="choose-back">
-        <input type="submit" value="Back" id="back" class="option-back-submit">
+        <input type="submit" value="Back" id="option-back" class="option-back-submit">
     </div>
     <div class="play-opp">
         <input type="submit" value="Find opponents" id="findOpp" class="findOpp-submit">
