--- a/application/src/main/resources/webroot/pages/main_menu.html
+++ b/application/src/main/resources/webroot/pages/main_menu.html
@@ -29,7 +29,9 @@
 
 <div class="userInfo">
     <div class="userInfo-1">
-        <img src="../assets/media/avatars/Avatar_Banana.png" class="user-avatar" alt="avatar" title="avatar">
+        <a href="change_avatar.html">
+            <img src="../assets/media/avatars/Avatar_Banana.png" class="user-avatar" alt="avatar" title="avatar">
+        </a>
         <p>Welcome <span class="userName">userName</span></p>
         <p>LVL: <span class="level">5</span></p><span class="xp"><span class="xp-value"></span><span class="xp-text">200/500 XP</span></span>
     </div>
