begin van scratch card

--- a/application/src/main/resources/webroot/pages/dailystreaks.html
+++ b/application/src/main/resources/webroot/pages/dailystreaks.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="centerDailyStreak">
-    <form id="dailystreaks" class="showDailyRewards">
+    <!--<form id="dailystreaks" class="showDailyRewards">
         <h1>Daily Streaks</h1>
 
         <p>Here are your daily rewards!</p>
@@ -23,11 +23,26 @@
             <input type="submit" value="Close" id="close" class="close-submit">
         </div>
 
+    </form>-->
+
+    <form id="scratchCard">
+        <h1>Scratch card</h1>
+
+        <div id="prices">
+        </div>
+
+        <div id="scratch">
+        </div>
+
+
+        <!--Test-->
     </form>
 </header>
 
 
-<script type="text/javascript" src="../assets/js/dailystreaks.js"></script>
+
+<!--<script type="text/javascript" src="../assets/js/dailystreaks.js"></script>-->
+<script type="text/javascript" src="../assets/js/scratch_card.js"></script>
 
 </body>
 </html>
