controleerd als je 3 dezelfde prijzen hebt

--- a/application/src/main/resources/webroot/pages/dailystreaks.html
+++ b/application/src/main/resources/webroot/pages/dailystreaks.html
@@ -25,7 +25,7 @@
 
     </form>-->
 
-    <form id="scratchCard">
+    <form id="scratchCard" class="showDailyRewards">
         <h1>Scratch card</h1>
 
         <div id="prices">
