scratch card werkt helemaal

--- a/application/src/main/resources/webroot/pages/main_menu.html
+++ b/application/src/main/resources/webroot/pages/main_menu.html
@@ -22,7 +22,16 @@
         <div class="close">
             <input type="submit" value="Close" id="close" class="close-submit">
         </div>
+    </form>
 
+    <form id="scratchCard" class="hiddenDailyRewards">
+        <h1>Scratch card</h1>
+
+        <div id="prices">
+        </div>
+
+        <div id="scratch">
+        </div>
     </form>
 </header>
 
@@ -62,6 +71,7 @@
 
 <script type="text/javascript" src="../assets/js/main_menu.js"></script>
 <script type="text/javascript" src="../assets/js/dailystreaks.js"></script>
+<script type="text/javascript" src="../assets/js/scratch_card.js"></script>
 
 </body>
 </html>
