mystery box werkt

--- a/application/src/main/resources/webroot/pages/dailystreaks.html
+++ b/application/src/main/resources/webroot/pages/dailystreaks.html
@@ -28,7 +28,7 @@
     <form id="scratchCard" class="showDailyRewards">
         <h1>Scratch card</h1>
 
-        <div id="prices">
+        <div id="pricesScratch">
         </div>
 
         <div id="scratch">
