--- a/application/src/main/resources/webroot/pages/main_menu.html
+++ b/application/src/main/resources/webroot/pages/main_menu.html
@@ -27,12 +27,23 @@
     <form id="scratchCard" class="hiddenDailyRewards">
         <h1>Scratch card</h1>
 
-        <div id="prices">
+        <div id="pricesScratch">
         </div>
 
         <div id="scratch">
         </div>
     </form>
+
+
+    <form id="mysteryBoxCard" class="hiddenDailyRewards">
+        <h1>Mystery Box</h1>
+
+        <div id="mysteryBox"></div>
+
+        <div id="pricesMysteryBox">
+        </div>
+    </form>
+
 </header>
 
 
@@ -72,6 +83,7 @@
 <script type="text/javascript" src="../assets/js/main_menu.js"></script>
 <script type="text/javascript" src="../assets/js/dailystreaks.js"></script>
 <script type="text/javascript" src="../assets/js/scratch_card.js"></script>
+<script type="text/javascript" src="../assets/js/mystery_box.js"></script>
 
 </body>
 </html>
