--- a/application/src/main/resources/webroot/pages/change_avatar.html
+++ b/application/src/main/resources/webroot/pages/change_avatar.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-<form id="confirm" class="hidden">
-    <h1>Confirm</h1>
-    <p>Are you sure, you want to change your avater?</p>
-    <input type="submit" value="No" id="no">
-    <input type="submit" value="Yes" id="yes">
-</form>
+<div id="form_confirm">
+    <form id="confirm" class="hidden">
+        <h1>Confirm</h1>
+        <p>Are you sure, you want to change your avater?</p>
+        <input type="submit" value="No" id="no">
+        <input type="submit" value="Yes" id="yes">
+    </form>
+</div>
 
 
 <header>
