--- a/application/src/main/resources/webroot/pages/main_menu.html
+++ b/application/src/main/resources/webroot/pages/main_menu.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="centerDailyStreak">
-    <form id="dailystreaks" class="showDailyRewards">
+    <section id="dailystreaks" class="showDailyRewards">
         <h1>Daily Streaks</h1>
 
         <p>Here are your daily rewards!</p>
@@ -22,9 +22,9 @@
         <div class="close">
             <input type="submit" value="Close" id="close" class="close-submit">
         </div>
-    </form>
+    </section>
 
-    <form id="scratchCard" class="hiddenDailyRewards">
+    <section id="scratchCard" class="hiddenDailyRewards">
         <h1>Scratch card</h1>
 
         <div id="pricesScratch">
@@ -32,17 +32,17 @@
 
         <div id="scratch">
         </div>
-    </form>
+    </section>
 
 
-    <form id="mysteryBoxCard" class="hiddenDailyRewards">
+    <section id="mysteryBoxCard" class="hiddenDailyRewards">
         <h1>Mystery Box</h1>
 
         <div id="mysteryBox"></div>
 
         <div id="pricesMysteryBox">
         </div>
-    </form>
+    </section>
 
 </header>
 
