Sending of all needed data for matchmaking

--- a/application/src/main/resources/webroot/pages/chooseHero.html
+++ b/application/src/main/resources/webroot/pages/chooseHero.html
@@ -30,6 +30,10 @@
     </div>
 </div>
 
+<script type="text/javascript" src="../assets/js/sockjs.min.js"></script>
+<script type="text/javascript" src="../assets/js/vertx-eventbus.min.js"></script>
+<script type="text/javascript" src="../assets/js/cookies.js"></script>
+<script type="text/javascript" src="../assets/js/matching.js"></script>
 <script type="text/javascript" src="../assets/js/chooseHero.js"></script>
 
 </body>
