Sending ready state, but backend not yet active

--- a/application/src/main/resources/webroot/pages/tetrisMultiplayerField.html
+++ b/application/src/main/resources/webroot/pages/tetrisMultiplayerField.html
@@ -42,6 +42,10 @@
 
 </footer>
 
+<script type="text/javascript" src="../assets/js/sockjs.min.js"></script>
+<script type="text/javascript" src="../assets/js/vertx-eventbus.min.js"></script>
+<script type="text/javascript" src="../assets/js/cookies.js"></script>
+<script type="text/javascript" src="../assets/js/ready.js"></script>
 <script type="text/javascript" src="../assets/js/multiplayerField.js"></script>
 
 </body>
