Hide those canvas whom are not needed

--- a/application/src/main/resources/webroot/pages/tetrisMultiplayerField.html
+++ b/application/src/main/resources/webroot/pages/tetrisMultiplayerField.html
@@ -17,16 +17,16 @@
     </div>
 
     <div class="multiplayer-opponents">
-            <canvas class="userField_2" id="userField_2">
+            <canvas class="userField_2 hidden" id="userField_2">
             </canvas>
 
-            <canvas class="userField_3" id="userField_3">
+            <canvas class="userField_3 hidden" id="userField_3">
             </canvas>
 
-            <canvas class="userField_4" id="userField_4">
+            <canvas class="userField_4 hidden" id="userField_4">
             </canvas>
 
-            <canvas class="userField_5" id="userField_5">
+            <canvas class="userField_5 hidden" id="userField_5">
             </canvas>
     </div>
 </div>
