--- a/src/main/resources/webroot/chooseGamemode.html
+++ b/src/main/resources/webroot/chooseGamemode.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Gamemodes</title>
     <meta name="author" content="Bryan Helsens"/>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
 <header class="retroBlocks-header">
-    <img src="../assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
+    <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
     <p class="title">Choose a gamemode</p>
 </header>
 
@@ -25,8 +25,8 @@
 
 </main>
 
-<script src="../assets/js/chooseGamemode.js"></script>
+<script src="assets/js/chooseGamemode.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
