--- a/src/main/resources/webroot/chooseHero.html
+++ b/src/main/resources/webroot/chooseHero.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Choose_hero</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
 <header class="retroBlocks-header">
-    <img src="../assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
+    <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
     <p class="chooseHeroTitle">Choose a hero</p>
 </header>
 
@@ -30,13 +30,13 @@
     </div>
 </div>
 
-<script src="../assets/js/sockjs.min.js"></script>
-<script src="../assets/js/vertx-eventbus.min.js"></script>
-<script src="../assets/js/cookies.js"></script>
-<script src="../assets/js/matching.js"></script>
-<script src="../assets/js/chooseHero.js"></script>
+<script src="assets/js/sockjs.min.js"></script>
+<script src="assets/js/vertx-eventbus.min.js"></script>
+<script src="assets/js/cookies.js"></script>
+<script src="assets/js/matching.js"></script>
+<script src="assets/js/chooseHero.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 
 </body>
 </html>
