--- a/src/main/resources/webroot/chooseMenu.html
+++ b/src/main/resources/webroot/chooseMenu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Choose_menu</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
@@ -25,6 +25,6 @@
     </div>
 </div>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
