--- a/src/main/resources/webroot/dailystreaks.html
+++ b/src/main/resources/webroot/dailystreaks.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Dailystreaks</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/dailystreaks.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/dailystreaks.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -39,8 +39,8 @@
 
 
 <!--<script type="text/javascript" src="../assets/js/dailystreaks.js"></script>-->
-<script src="../assets/js/scratch_card.js"></script>
+<script src="assets/js/scratch_card.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
