--- a/src/main/resources/webroot/highScores.html
+++ b/src/main/resources/webroot/highScores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>highScores</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
@@ -39,6 +39,6 @@
 
 <a href="#" id="toggleMusic" class="soundON"></a>
 
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
