--- a/src/main/resources/webroot/tetrisMultiplayerField.html
+++ b/src/main/resources/webroot/tetrisMultiplayerField.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>TetrisMultiplayer</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -42,12 +42,12 @@
 
 </footer>
 
-<script src="../assets/js/sockjs.min.js"></script>
-<script src="../assets/js/vertx-eventbus.min.js"></script>
-<script src="../assets/js/cookies.js"></script>
-<script src="../assets/js/gameCommunication.js"></script>
-<script src="../assets/js/multiplayerField.js"></script>
+<script src="assets/js/sockjs.min.js"></script>
+<script src="assets/js/vertx-eventbus.min.js"></script>
+<script src="assets/js/cookies.js"></script>
+<script src="assets/js/gameCommunication.js"></script>
+<script src="assets/js/multiplayerField.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
