--- a/src/main/resources/webroot/change_avatar.html
+++ b/src/main/resources/webroot/change_avatar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Change avatar</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
     <div class="userInfo">
 
         <div class="userInfo-1">
-            <img src="../assets/media/avatars/Avatar_Banana.png" class="user-avatar" alt="avatar" title="avatar">
+            <img src="assets/media/avatars/Avatar_Banana.png" class="user-avatar" alt="avatar" title="avatar">
             <p>Welcome <span class="userName">userName</span></p>
             <p>LVL: <span class="level">5</span></p><span class="xp"><span class="xp-value"></span><span class="xp-text">200/500 XP</span></span>
         </div>
@@ -47,8 +47,8 @@
 
 
 
-<script src="../assets/js/change_avatars.js"></script>
+<script src="assets/js/change_avatars.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
