--- a/src/main/resources/webroot/register.html
+++ b/src/main/resources/webroot/register.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reinbert Van Acker"/>
     <title>Tetris</title>
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
 
 </head>
 <body>
 <header class="retroBlocks-header">
-    <img src="../assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
+    <img src="assets/media/retroBlocks.png" alt="retroBlocks" title="retroBlocks">
 </header>
 <div class="login-container">
     <form id="register" method="post"> <!--action="javascript:sendMessage()"-->
@@ -21,12 +21,12 @@
         <input type="submit" name="register" class="login register-submit" value="register">
     </form>
     <div class="login-help">
-        <a href="/static/">Login</a>
+        <a href="./">Login</a>
     </div>
 </div>
 
-<script src="../assets/js/register.js"></script>
+<script src="assets/js/register.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
-<script src="/static/assets/js/themeMusic.js"></script>
+<script src="assets/js/themeMusic.js"></script>
 </body>
 </html>
