--- a/src/main/resources/webroot/tetrisMultiplayerField.html
+++ b/src/main/resources/webroot/tetrisMultiplayerField.html
@@ -42,20 +42,13 @@
 
 </footer>
 
-<<<<<<< HEAD:src/main/resources/webroot/tetrisMultiplayerField.html
 <script src="assets/js/sockjs.min.js"></script>
 <script src="assets/js/vertx-eventbus.min.js"></script>
 <script src="assets/js/cookies.js"></script>
 <script src="assets/js/gameCommunication.js"></script>
 <script src="assets/js/multiplayerField.js"></script>
-=======
-<script src="../assets/js/gameSounds.js"></script>
-<script src="../assets/js/sockjs.min.js"></script>
-<script src="../assets/js/vertx-eventbus.min.js"></script>
-<script src="../assets/js/cookies.js"></script>
-<script src="../assets/js/gameCommunication.js"></script>
-<script src="../assets/js/multiplayerField.js"></script>
->>>>>>> gameSounds2.0:build/resources/main/webroot/pages/tetrisMultiplayerField.html
+<script src="assets/js/gameSounds.js"></script>
+
 <a href="#" id="toggleMusic" class="soundON"></a>
 <script src="assets/js/themeMusic.js"></script>
 </body>
