--- a/src/main/resources/webroot/main_menu.html
+++ b/src/main/resources/webroot/main_menu.html
@@ -49,7 +49,7 @@
 
 <div class="userInfo">
     <div class="userInfo-1">
-        <a href="/static/pages/change_avatar.html" id="changeAvatar">
+        <a href="change_avatar.html" id="changeAvatar">
         </a>
         <p>Welcome <span class="userName" id="userName"></span></p>
         <p>LVL: <span class="level"></span></p><span class="xp"><span class="xp-value"></span><span class="xp-text"></span></span>
