removed close button by daily rewards

--- a/src/main/resources/webroot/main_menu.html
+++ b/src/main/resources/webroot/main_menu.html
@@ -19,9 +19,9 @@
         <div id="dailyRewards">
         </div>
 
-        <div class="close">
+        <!--<div class="close">
             <input type="submit" value="Close" id="close" class="close-submit">
-        </div>
+        </div>-->
     </section>
 
     <section id="scratchCard" class="hiddenDailyRewards">
