--- a/src/main/resources/webroot/main_menu.html
+++ b/src/main/resources/webroot/main_menu.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="centerDailyStreak">
-    <section id="dailystreaks" class="showDailyRewards">
+    <section id="dailystreaks" class="hiddenDailyRewards">
         <h1>Daily Streaks</h1>
 
         <p>Here are your daily rewards!</p>
