--- a/src/main/resources/webroot/change_avatar.html
+++ b/src/main/resources/webroot/change_avatar.html
@@ -47,9 +47,9 @@
 </main>
 
 
-<script src="/static/assets/js/sockjs.min.js"></script>
-<script src="/static/assets/js/vertx-eventbus.min.js"></script>
-<script src="/static/assets/js/change_avatars.js"></script>
+<script src="assets/js/sockjs.min.js"></script>
+<script src="assets/js/vertx-eventbus.min.js"></script>
+<script src="assets/js/change_avatars.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
 <script src="assets/js/themeMusic.js"></script>
 </body>
