--- a/src/main/resources/webroot/main_menu.html
+++ b/src/main/resources/webroot/main_menu.html
@@ -61,8 +61,8 @@
     </div>
 
     <div>
-        <p><img src="/static/assets/media/cube_logo.png" class="cube" title="cube" alt="cube">Cubes: <span class="numberOfCubes"></span><a href="#" id="buyCubes"><i class="material-icons">add_circle</i></a></p>
-        <p><img src="/static/assets/media/clanPoints-logo.png" class="cp" alt="cp" title="cp">Clanpoints: <span class="clanpoints"></span></p>
+        <p><img src="assets/media/cube_logo.png" class="cube" title="cube" alt="cube">Cubes: <span class="numberOfCubes"></span><a href="#" id="buyCubes"><i class="material-icons">add_circle</i></a></p>
+        <p><img src="assets/media/clanPoints-logo.png" class="cp" alt="cp" title="cp">Clanpoints: <span class="clanpoints"></span></p>
     </div>
 </div>
 
@@ -79,13 +79,13 @@
     <input type="submit" id="logOut" name="logOut" class="main logOut-submit" value="Log out">
 </form>
 
-<script src="/static/assets/js/cookies.js"></script>
-<script src="/static/assets/js/sockjs.min.js"></script>
-<script src="/static/assets/js/vertx-eventbus.min.js"></script>
-<script src="/static/assets/js/main_menu.js"></script>
-<script src="/static/assets/js/dailystreaks.js"></script>
-<script src="/static/assets/js/scratch_card.js"></script>
-<script src="/static/assets/js/mystery_box.js"></script>
+<script src="assets/js/cookies.js"></script>
+<script src="assets/js/sockjs.min.js"></script>
+<script src="assets/js/vertx-eventbus.min.js"></script>
+<script src="assets/js/main_menu.js"></script>
+<script src="assets/js/dailystreaks.js"></script>
+<script src="assets/js/scratch_card.js"></script>
+<script src="assets/js/mystery_box.js"></script>
 <a href="#" id="toggleMusic" class="soundON"></a>
 <script src="assets/js/themeMusic.js"></script>
 </body>
