--- a/src/main/resources/webroot/mystery_box.html
+++ b/src/main/resources/webroot/mystery_box.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Mystery Box</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/mainCSS.css">
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/static/assets/css/mysteryBox.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mainCSS.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mysteryBox.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -22,8 +22,8 @@
     <div class="priceWon"></div>
 </div>
 
-<script src="/static/assets/js/sockjs.min.js"></script>
-<script src="/static/assets/js/vertx-eventbus.min.js"></script>
+<script src="assets/js/sockjs.min.js"></script>
+<script src="assets/js/vertx-eventbus.min.js"></script>
 <script src="assets/js/mystery_box_opening.js"></script>
 
 
